--- a/assets/sakura.css
+++ b/assets/sakura.css
@@ -1,3 +1,4 @@
+/* $color-text: #dedce5; */
 /* Sakura.css v1.0.0
  * ================
  * Minimal css theme.
@@ -13,8 +14,8 @@ body {
   line-height: 1.618;
   max-width: 38em;
   margin: auto;
-  color: #4a4a4a;
-  background-color: #f9f9f9;
+  color: #d9d8dc;
+  background-color: #120c0e;
   padding: 13px; }
 
 @media (max-width: 684px) {
@@ -60,14 +61,14 @@ small, sub, sup {
   font-size: 75%; }
 
 hr {
-  border-color: #2c8898; }
+  border-color: #eb99a1; }
 
 a {
   text-decoration: none;
-  color: #2c8898; }
+  color: #eb99a1; }
   a:hover {
-    color: #982c61;
-    border-bottom: 2px solid #4a4a4a; }
+    color: #DA4453;
+    border-bottom: 2px solid #d9d8dc; }
 
 ul {
   padding-left: 1.4em; }
@@ -79,14 +80,14 @@ blockquote {
   font-style: italic;
   margin-left: 1.5em;
   padding-left: 1em;
-  border-left: 3px solid #2c8898; }
+  border-left: 3px solid #eb99a1; }
 
 img {
   max-width: 100%; }
 
 /* Pre and Code */
 pre {
-  background-color: #f1f1f1;
+  background-color: #40363a;
   display: block;
   padding: 1em;
   overflow-x: auto; }
@@ -94,7 +95,7 @@ pre {
 code {
   font-size: 0.9em;
   padding: 0 0.5em;
-  background-color: #f1f1f1;
+  background-color: #40363a;
   white-space: pre-wrap; }
 
 pre > code {
@@ -110,13 +111,13 @@ table {
 
 td, th {
   padding: 0.5em;
-  border-bottom: 1px solid #f1f1f1; }
+  border-bottom: 1px solid #40363a; }
 
 /* Buttons, forms and input */
 input, textarea {
-  border: 1px solid #4a4a4a; }
+  border: 1px solid #d9d8dc; }
   input:focus, textarea:focus {
-    border: 1px solid #2c8898; }
+    border: 1px solid #eb99a1; }
 
 textarea {
   width: 100%; }
@@ -127,37 +128,37 @@ textarea {
   text-align: center;
   text-decoration: none;
   white-space: nowrap;
-  background-color: #2c8898;
-  color: #f9f9f9;
+  background-color: #eb99a1;
+  color: #120c0e;
   border-radius: 1px;
-  border: 1px solid #2c8898;
+  border: 1px solid #eb99a1;
   cursor: pointer;
   box-sizing: border-box; }
   .button[disabled], button[disabled], input[type="submit"][disabled], input[type="reset"][disabled], input[type="button"][disabled] {
     cursor: default;
     opacity: .5; }
   .button:focus, .button:hover, button:focus, button:hover, input[type="submit"]:focus, input[type="submit"]:hover, input[type="reset"]:focus, input[type="reset"]:hover, input[type="button"]:focus, input[type="button"]:hover {
-    background-color: #982c61;
-    border-color: #982c61;
-    color: #f9f9f9;
+    background-color: #DA4453;
+    border-color: #DA4453;
+    color: #120c0e;
     outline: 0; }
 
 textarea, select, input[type] {
-  color: #4a4a4a;
+  color: #d9d8dc;
   padding: 6px 10px;
   /* The 6px vertically centers text on FF, ignored by Webkit */
   margin-bottom: 10px;
-  background-color: #f1f1f1;
-  border: 1px solid #f1f1f1;
+  background-color: #40363a;
+  border: 1px solid #40363a;
   border-radius: 4px;
   box-shadow: none;
   box-sizing: border-box; }
   textarea:focus, select:focus, input[type]:focus {
-    border: 1px solid #2c8898;
+    border: 1px solid #eb99a1;
     outline: 0; }
 
 input[type="checkbox"]:focus {
-  outline: 1px dotted #2c8898; }
+  outline: 1px dotted #eb99a1; }
 
 label, legend, fieldset {
   display: block;
